Overflow wasn't properly handled on the x-axis fixed

--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -7,6 +7,7 @@
 html {
     font-size: 62.5%; /* makes 1rem 10px */
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body {
     font-size: 1.6em; /* default font of 16px */
